Fix shift+e shortcut on shortcuts page

--- a/app/assets/stylesheets/specific/keyboard_shortcuts.css.scss
+++ b/app/assets/stylesheets/specific/keyboard_shortcuts.css.scss
@@ -5,7 +5,7 @@ div#c-static {
     overflow: visible;
 
     section {
-      width: 20%;
+      min-width: 20%;
       float: left;
       margin-bottom: 1em;
 
